--- a/frontend/admin/inicio.html
+++ b/frontend/admin/inicio.html
@@ -12,7 +12,7 @@
     <aside class="sidebar d-flex flex-column">
         <div class="logo d-flex align-items-center p-3">
             <a href="/">
-                <img src="frontend/admin/img/logo.PNG" alt="Logo Metropolitan" class="logo-img mr-2">
+                <img src="/frontend/admin/img/logo.PNG" alt="Logo Metropolitan" class="logo-img mr-2">
             </a>
         </div>
         <nav class="menu d-flex flex-column flex-grow-1">
