--- a/frontend/admin/crud_articulos.html
+++ b/frontend/admin/crud_articulos.html
@@ -26,7 +26,7 @@
             <a href="/admin/mod-articulos" class="d-flex align-items-center p-3"><img src="/frontend/admin/img/mod_articulos.png"
                     alt="Artículos" class="icon mr-2"> MOD. ARTÍCULOS</a>
             <a href="/admin/mod-comentarios" class="d-flex align-items-center p-3"><img
-                    src="frontend/admin/img/mod_comentarios.png" alt="Comentarios" class="icon mr-2"> MOD. COMENTARIOS</a>
+                    src="/frontend/admin/img/mod_comentarios.png" alt="Comentarios" class="icon mr-2"> MOD. COMENTARIOS</a>
             <a href="/admin/estadisticas" class="d-flex align-items-center p-3"><img src="/frontend/admin/img/estadisticas.png"
                     alt="Estadísticas" class="icon mr-2"> ESTADÍSTICAS</a>
             <a href="/admin/dudas" class="d-flex align-items-center p-3"><img src="/frontend/admin/img/dudas.png" alt="Dudas"
@@ -45,11 +45,11 @@
             </div>
             <div class="user-info d-flex align-items-center">
                 <div class="text-right mr-2">
-                    <span>Nombre de usuario</span><br>
+                    <span class="username" id="navbar-info-usuario-nombre">Nombre</span><br>
                     <small>Administrador</small>
                 </div>
                 <a href="/perfil">
-                    <img src="/frontend/admin/img/perfil_default.png" alt="Foto de perfil" class="rounded-circle" width="40" height="40">
+                    <img id="navbar-info-usuario-foto" src="/frontend/admin/img/perfil_default.png" alt="Foto de perfil" class="rounded-circle" width="40" height="40">
                 </a>
             </div>
         </header>
@@ -146,6 +146,8 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <script src="/frontend/admin/js/crud_articulos.js"></script>
+    <script type="module" src="/frontend/usuario/js/ajax/perfil_ajax.js"></script>
+
     
 </body>
 
