--- a/frontend/admin/inicio.html
+++ b/frontend/admin/inicio.html
@@ -44,11 +44,11 @@
             </div>
             <div class="user-info d-flex align-items-center">
                 <div class="text-right mr-2">
-                    <span>Nombre de usuario</span><br>
+                    <span class="username" id="navbar-info-usuario-nombre">Nombre</span><br>
                     <small>Administrador</small>
                 </div>
                 <a href="/perfil">
-                    <img src="frontend/admin/img/perfil_default.png" alt="Foto de perfil" class="rounded-circle" width="40"
+                    <img id="navbar-info-usuario-foto" src="frontend/admin/img/perfil_default.png" alt="Foto de perfil" class="rounded-circle" width="40"
                         height="40">
                 </a>
             </div>
