JQuery y backend de la página de perfil completado, a excepcion de las etiquetas

--- a/frontend/usuario/inicio_editor.html
+++ b/frontend/usuario/inicio_editor.html
@@ -114,6 +114,6 @@
     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
     <!-- Scripts de JS -->
-    <script src=""></script>
+    <script type="module" src="/frontend/usuario/js/ajax/escritor_ajax.js"></script>
 </body>
 </html>
