--- a/frontend/publico/información_estatica.html
+++ b/frontend/publico/información_estatica.html
@@ -49,15 +49,16 @@
                     </li>
                 </ul>
             </div>
-            <!-- Información y foto del usuario -->
-            <div class="d-flex align-items-center user-info ms-auto">
-                <div class="text-end" id="nombre-rol">
-                    <span class="username" id="navbar-info-usuario-nombre">Nombre</span><br>
-                    <span class="role" id="navbar-info-usuario-rol">Rol</span>
-                </div>
-                <a href="/perfil">
-                    <img id="navbar-info-usuario-foto" src="frontend/publico/img/perfil_default.png" alt="Foto de perfil">
-                </a>
+            <!-- Botón de Inicio de Sesión -->
+            <a id="inicia-sesion" href="/frontend/publico/autenticacion/login.html" class="btn btn-secondary">Inicia Sesión</a>
+
+            <!-- Contenedor de información del usuario -->
+            <div id="perfil-icono" style="display: none;">
+            <a href="/frontend/usuario/perfil.html">
+            <img id="navbar-info-usuario-foto" src="/frontend/img_biblioteca/perfiles/default.png" alt="" width="40" height="40">
+            </a>
+            <span id="navbar-info-usuario-nombre"></span>
+            <span id="navbar-info-usuario-rol"></span>
             </div>
         </div>
     </nav>
@@ -150,5 +151,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/sweetalert2/11.14.0/sweetalert2.all.js"
     integrity="sha512-HE6XTjw3UV1hqENThKtsSn4mr3sx/lXbTSVPlOdIU3pprqz5ti16sGIGw8y5EAePRYg80O3OEBRnXPwON7vOUA=="
     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
+    <script src="/frontend/publico/js/ajax/publico.js" ></script>
 </body>
 </html>
