--- a/frontend/publico/inicio.html
+++ b/frontend/publico/inicio.html
@@ -53,8 +53,8 @@
                     </li>
                 </ul>
             </div>
-            <!-- Botón de Inicio de Sesión -->
-            <a id="inicia-sesion" href="/frontend/publico/autenticacion/login.html" class="btn btn-secondary">Inicia Sesión</a>
+            <!-- Inicio de Sesión -->
+            <a id="inicia-sesion" href="/login" class="btn btn-secondary">Inicia Sesión</a>
 
             <!-- Contenedor de información del usuario -->
             <div id="perfil-icono" style="display: none;">
