--- a/frontend/publico/información_estatica.html
+++ b/frontend/publico/información_estatica.html
@@ -68,7 +68,7 @@
         <div class="row">
             <div class="col-md-3 col-sm-6 mb-4">
                 <div class="profile-box">
-                    <img src="img/mariana.jpg" alt="Frontend Developer" class="img-fluid">
+                    <img src="/frontend/publico/img/mariana.jpg" alt="Frontend Developer" class="img-fluid">
                     <h4>Frontend Developer</h4>
                     <h5>Mariana Navarro</h5>
                     <p>Responsable de crear y mejorar la interfaz de usuario para una experiencia de navegación intuitiva y atractiva. Maneja tecnologías como HTML, CSS y JavaScript para garantizar la funcionalidad y el diseño visual de aplicaciones web.</p>
@@ -76,7 +76,7 @@
             </div>
             <div class="col-md-3 col-sm-6 mb-4">
                 <div class="profile-box">
-                    <img src="img/manuel.png" alt="Backend Developer" class="img-fluid">
+                    <img src="/frontend/publico/img/manuel.png" alt="Backend Developer" class="img-fluid">
                     <h4>Backend Developer</h4>
                     <h5>Manuel Magaña</h5>
                     <p>Encargado de construir y mantener el lado del servidor de aplicaciones, gestionando bases de datos y lógica empresarial. Usa tecnologías como Node.js, Python y SQL para asegurar que los sistemas funcionen de manera eficiente y segura.</p>
@@ -84,7 +84,7 @@
             </div>
             <div class="col-md-3 col-sm-6 mb-4">
                 <div class="profile-box">
-                    <img src="img/diego.png" alt="DB Administrator" class="img-fluid">
+                    <img src="/frontend/publico/img/diego.png" alt="DB Administrator" class="img-fluid">
                     <h4>DB Administrator</h4>
                     <h5>Diego Escamilla</h5>
                     <p>Especialista en la gestión y mantenimiento de bases de datos. Asegura la integridad de los datos, realiza optimizaciones de rendimiento y supervisa las copias de seguridad. Utiliza herramientas como MySQL, PostgreSQL o MongoDB.</p>
@@ -92,7 +92,7 @@
             </div>
             <div class="col-md-3 col-sm-6 mb-4">
                 <div class="profile-box">
-                    <img src="img/maximiliano.png" alt="Product Manager" class="img-fluid">
+                    <img src="/frontend/publico/img/maximiliano.png" alt="Product Manager" class="img-fluid">
                     <h4>Product Manager</h4>
                     <h5>Maximiliano Juárez</h5>
                     <p>Lidera la estrategia y visión del producto, asegurándose de que los equipos de desarrollo construyan soluciones alineadas con las necesidades del cliente. Coordina entre equipos y supervisa el ciclo de vida del producto desde su concepción hasta el lanzamiento.</p>
