Correccion navbar paginas publicas, crud de etiquetas desde el perfil del usuario y avances en el backend de los articulos

--- a/frontend/publico/inicio.html
+++ b/frontend/publico/inicio.html
@@ -57,14 +57,14 @@
             <a id="inicia-sesion" href="/login" class="inicia-sesion">Inicia Sesión</a>
 
             <!-- Contenedor de información del usuario -->
-            <div id="perfil-icono" style="display: none; align-items: center; gap: 10px;">
-                <a href="/frontend/usuario/perfil.html">
-                <img id="navbar-info-usuario-foto" src="" alt="" width="40" height="40">
-                </a>
-                <div style="display: flex; flex-direction: column;">
-                    <span id="navbar-info-usuario-nombre" style="font-weight: bold;"></span>
-                    <span id="navbar-info-usuario-rol" style="font-size: 12px; color: gray;"></span>
+            <div id="perfil-icono" class="d-flex align-items-center user-info ms-auto">
+                <div class="text-end" id="nombre-rol">
+                    <span class="username" id="navbar-info-usuario-nombre">Nombre</span><br>
+                    <span class="role" id="navbar-info-usuario-rol">Rol</span>
                 </div>
+                <a href="/perfil">
+                    <img id="navbar-info-usuario-foto" src="/frontend/img_biblioteca/perfiles/default.png" alt="">
+                </a>
             </div>
         </div>
     </nav>
