--- a/frontend/usuario/perfil.html
+++ b/frontend/usuario/perfil.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Perfil</title>
 
-
     <!--Font Awesome-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" 
     integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" 
@@ -224,15 +223,9 @@
                 </div>
                 <div class="modal-body">
                     <form id="form-etiquetas">
-                        <button class="toggle-btn opcion-etiqueta mt-1" type="button" onclick="toggleButton(event, this)">Animales</button>
-                        <button class="toggle-btn opcion-etiqueta mt-1" type="button" onclick="toggleButton(event, this)">Comida</button>
-                        <button class="toggle-btn opcion-etiqueta mt-1" type="button" onclick="toggleButton(event, this)">Carros</button>
-                        <button class="toggle-btn opcion-etiqueta mt-1" type="button" onclick="toggleButton(event, this)">Educación</button>
-                        <button class="toggle-btn opcion-etiqueta mt-1" type="button" onclick="toggleButton(event, this)">Finanzas</button>
-                        <button class="toggle-btn opcion-etiqueta mt-1" type="button" onclick="toggleButton(event, this)">Videojuegos</button>
-                        <button class="toggle-btn opcion-etiqueta mt-1" type="button" onclick="toggleButton(event, this)">Naturaleza</button>
-                        <button class="toggle-btn opcion-etiqueta mt-1" type="button" onclick="toggleButton(event, this)">Tecnología</button>
-                        <button class="toggle-btn opcion-etiqueta mt-1" type="button" onclick="toggleButton(event, this)">Moda</button>
+                        <button class="toggle-btn opcion-etiqueta mt-1" data-id="1" type="button" onclick="toggleButton(event, this)">Animales</button>
+                        <button class="toggle-btn opcion-etiqueta mt-1" data-id="2" type="button" onclick="toggleButton(event, this)">Comida</button>
+                        <button class="toggle-btn opcion-etiqueta mt-1" data-id="3" type="button" onclick="toggleButton(event, this)">Carros</button>
                         <!-- Añade más etiquetas según sea necesario -->
                     </form>
                 </div>
