Avances del jquery de la pagina de articulos y avances en la página de inicio para mostrar articulos en la galeria

--- a/frontend/usuario/articulos.html
+++ b/frontend/usuario/articulos.html
@@ -63,8 +63,7 @@
     </nav>
 
     <!-- Contenido -->
-    <h1 id="info-articulo-titulo" class="text-center mt-5">Monte Everest</h1>
-    <h5 id="info-articulo-descripcion" class="text-center">La historia de la montaña mas alta</h5>
+    <h1 id="info-articulo-titulo" class="text-center mt-5"></h1>
     
     <!-- Información del escritor y del artículo -->
     <div id="contenedor-info-articulo">
@@ -76,6 +75,11 @@
         <div id="info-etiquetas">
             <!-- Lista de etiquetas que componen el artículo -->
         </div>    
+        <div class="like-container">
+            <button class="heart-button" id="likeButton">
+                <span class="heart-icon">&hearts;</span>
+            </button>
+        </div>
     </div>
 
     <!-- Imagen y contenido del articulo -->
@@ -86,7 +90,7 @@
         </div>
         <div id="contenido-articulo" class="col-12">
             <!-- Contenido del artículo -->
-            <span id="info-articulo-contenido">El Monte Everest, con 8,848.86 metros, es la montaña más alta del mundo, símbolo de desafío humano, espiritualidad y un recordatorio de nuestra responsabilidad ambiental.</span>
+            <span id="info-articulo-contenido"></span>
         </div>
     </div>
 
