--- a/frontend/admin/crud_etiquetas.html
+++ b/frontend/admin/crud_etiquetas.html
@@ -74,7 +74,7 @@
         <hr class="divider">
 
         <div class="crud-header">
-            <input type="text" id="searchBar" class="search-bar" placeholder="Buscar Etiqueta" oninput="searchTag()">
+            <input type="text" id="searchBar" class="search-bar" placeholder="Buscar Etiqueta" >
         </div>
 
         <!-- Tabla CRUD -->
