--- a/frontend/admin/crud_usuarios.html
+++ b/frontend/admin/crud_usuarios.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CRUD de Etiquetas</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <title>CRUD de Usuarios</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="/frontend/admin/css/crud_etiquetas.css">
 </head>
 
@@ -88,7 +88,7 @@
                 <div class="modal-content">
                     <div class="modal-header">
                         <h5 class="modal-title" id="editTagModalLabel">Agregar Usuario</h5>
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Cerrar">
+                        <button type="button" class="close" data-bs-dismiss="modal" aria-label="Cerrar">
                             <span aria-hidden="true">&times;</span>
                         </button>
                     </div>
@@ -101,10 +101,6 @@
                                     <option value="Usuario">Usuario</option>
                                     <option value="Suspendido">Suspendido</option>
                                 </select>
-                            </div>
-                            <div class="form-group">
-                                <label for="añadir-fecha-nombre">Fecha de Creación</label>
-                                <input type="date" class="form-control" id="Date" required>
                             </div>
                             <div class="form-group">
                                 <label for="añadir-usuario-nombre">Nombre de usuario</label>
@@ -134,7 +130,7 @@
                 <div class="modal-content">
                     <div class="modal-header">
                         <h5 class="modal-title" id="editTagModalLabel">Editar Usuario</h5>
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Cerrar">
+                        <button type="button" class="close" data-bs-dismiss="modal" aria-label="Cerrar">
                             <span aria-hidden="true">&times;</span>
                         </button>
                     </div>
