--- a/frontend/publico/información_estatica.html
+++ b/frontend/publico/información_estatica.html
@@ -54,13 +54,13 @@
 
             <!-- Contenedor de información del usuario -->
             <div id="perfil-icono" style="display: none; align-items: center; gap: 10px;">
-                <a href="/frontend/usuario/perfil.html">
-                <img id="navbar-info-usuario-foto" src="" alt="" width="40" height="40">
-                </a>
                 <div style="display: flex; flex-direction: column;">
                     <span id="navbar-info-usuario-nombre" style="font-weight: bold;"></span>
                     <span id="navbar-info-usuario-rol" style="font-size: 12px; color: gray;"></span>
                 </div>
+                <a href="/frontend/usuario/perfil.html">
+                <img id="navbar-info-usuario-foto" src="" alt="" width="40" height="40">
+                </a>
             </div>
         </div>
     </nav>
@@ -123,15 +123,15 @@
             <div class="col-md-12">
                 <form>
                     <div class="form-group">
-                        <input type="text" class="form-control" placeholder="Nombre Completo" required>
+                        <input id="duda-nombre" type="text" class="form-control" placeholder="Nombre Completo" required>
                     </div>
                     <div class="form-group">
-                        <input type="email" class="form-control" placeholder="Correo Electronico" required>
+                        <input id="duda-correo" type="email" class="form-control" placeholder="Correo Electronico" required>
                     </div>
                     <div class="form-group">
-                        <textarea class="form-control" rows="4" placeholder="Mensaje" required></textarea>
+                        <textarea id="duda-descripcion" class="form-control" rows="4" placeholder="Mensaje" required></textarea>
                     </div>
-                    <button type="submit" class="btn btn-dark btn-block" onclick="alert('El mensaje ha sido enviado')">Enviar</button>
+                    <button id="boton-enviar" type="submit" class="btn btn-dark btn-block">Enviar</button>
                 </form>
             </div>
         </div>
@@ -155,5 +155,6 @@
     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
     <script src="/frontend/publico/js/ajax/publico.js" ></script>
+    <script src="/frontend/publico/js/ajax/dudas_ajax.js"></script>
 </body>
 </html>
