--- a/frontend/publico/inicio.html
+++ b/frontend/publico/inicio.html
@@ -58,13 +58,13 @@
 
             <!-- Contenedor de información del usuario -->
             <div id="perfil-icono" style="display: none; align-items: center; gap: 10px;">
-                <a href="/frontend/usuario/perfil.html">
-                <img id="navbar-info-usuario-foto" src="" alt="" width="40" height="40">
-                </a>
                 <div style="display: flex; flex-direction: column;">
                     <span id="navbar-info-usuario-nombre" style="font-weight: bold;"></span>
                     <span id="navbar-info-usuario-rol" style="font-size: 12px; color: gray;"></span>
                 </div>
+                <a href="/frontend/usuario/perfil.html">
+                <img id="navbar-info-usuario-foto" src="" alt="" width="40" height="40">
+                </a>
             </div>
         </div>
     </nav>
@@ -72,10 +72,10 @@
     <h1 class="text-center mt-5">METROPOLITAN</h1>
     <div class="search-bar">
         <input type="text" placeholder="Buscar noticias...">
-        <button><i class="bi bi-search"></i></button>
+        <button id="boton-busqueda"><i class="bi bi-search"></i></button>
     </div>    
     <section class="news-section">
-        <h2 class="text-center mt-3">TENDENCIAS</h2>
+        <h2 id="seccion-titulo" class="text-center mt-3">TENDENCIAS</h2>
         <div class="news-container">
             <a href="" class="news-box">NOTICIA</a>
             <a href="" class="news-box">NOTICIA</a>
@@ -85,7 +85,7 @@
         
     </section>
     <section class="news-section">
-        <h2 class="text-center mt-3">RECIENTES</h2>
+        <h2 id="seccion-titulo" class="text-center mt-3">RECIENTES</h2>
         <div class="news-container">
             <a href="" class="news-box">NOTICIA</a>
             <a href="" class="news-box">NOTICIA</a>
@@ -112,5 +112,6 @@
     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
     <script src="/frontend/publico/js/ajax/publico.js" ></script>
+    <script src="/frontend/publico/js/ajax/busqueda_ajax.js"></script>
 </body>
 </html>
