--- a/frontend/admin/crud_usuarios.html
+++ b/frontend/admin/crud_usuarios.html
@@ -150,7 +150,7 @@
                             </div>
                             <div class="form-group">
                                 <label for="editar-contraseña-nombre">Contraseña</label>
-                                <input type="text" class="form-control" id="editPasword" required>
+                                <input type="text" class="form-control" id="editPassword" required>
                             </div>
                             <div class="form-group">
                                 <label for="editar-correo-nombre">Email</label>
