--- a/frontend/admin/crud_articulos.html
+++ b/frontend/admin/crud_articulos.html
@@ -78,7 +78,7 @@
             </table>
         </div>
 
-<div class="modal fade" id="editTagModal" tabindex="-1" role="dialog" aria-labelledby="editTagModalLabel" >
+<div class="modal fade" id="editTagModal" tabindex="-1" role="dialog" aria-labelledby="editTagModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
