Mostrar articulos al inicio

--- a/frontend/publico/inicio.html
+++ b/frontend/publico/inicio.html
@@ -76,7 +76,7 @@
     </div>    
     <section class="news-section">
         <h2 id="seccion-titulo" class="text-center mt-3">TENDENCIAS</h2>
-        <div class="news-container">
+        <div class="news-container galeria-noticias">
             <a href="" class="news-box">NOTICIA</a>
             <a href="" class="news-box">NOTICIA</a>
             <a href="" class="news-box">NOTICIA</a>
@@ -86,7 +86,7 @@
     </section>
     <section class="news-section">
         <h2 id="seccion-titulo" class="text-center mt-3">RECIENTES</h2>
-        <div class="news-container">
+        <div class="news-container galeria-noticias">
             <a href="" class="news-box">NOTICIA</a>
             <a href="" class="news-box">NOTICIA</a>
             <a href="" class="news-box">NOTICIA</a>
@@ -113,5 +113,6 @@
 
     <script src="/frontend/publico/js/ajax/publico.js" ></script>
     <script src="/frontend/publico/js/ajax/busqueda_ajax.js"></script>
+    <script src="/frontend/publico/js/ajax/inicio_ajax.js"></script>
 </body>
 </html>
