--- a/frontend/publico/información_estatica.html
+++ b/frontend/publico/información_estatica.html
@@ -131,7 +131,7 @@
                     <div class="form-group">
                         <textarea class="form-control" rows="4" placeholder="Mensaje" required></textarea>
                     </div>
-                    <button type="submit" class="btn btn-dark btn-block" onclick="alert('Duda enviada, mantente al tanto con tu correo')">Enviar</button>
+                    <button id="boton-enviar" type="submit" class="btn btn-dark btn-block" onclick="alert('Duda enviada, mantente al tanto con tu correo')">Enviar</button>
                 </form>
             </div>
         </div>
